# database

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  cog.toml  rust-toolchain.toml  server.json
crates/pii/: Cargo.toml  README.md
crates/pii/benches/: analyze.rs  anonymize.rs  redact.rs
crates/pii/benches/common/: mod.rs
crates/pii/corpus/: ip.toml  phone.toml  sin_ca.toml  vat_number.toml
crates/pii/src/: analyzer.rs  anonymizer.rs  context.rs  corpus.rs  entity.rs  error.rs  lib.rs  ner.rs  overlap.rs  pattern.rs  redact.rs  regex.rs  result.rs  score.rs  timeout.rs  validation.rs  words.rs
crates/pii/src/operator/: hash.rs  mask.rs  mod.rs  ops.rs  redact.rs  replace.rs
crates/pii/src/operators/: hash.rs  ops.rs
crates/pii/src/recognizer/: category.rs  deny_list.rs  entity.rs  keyword_context.rs  mod.rs  pattern_recognizer.rs  severity.rs  types.rs  validators.rs
crates/pii/src/recognizer/builtin/: credit_card.rs  crypto.rs  email.rs  iban.rs  ip.rs  mod.rs  phone.rs  url.rs  us_ssn.rs
crates/pii/src/recognizer/pattern/: all.rs  api_key.rs  credit_card.rs  crypto.rs  email.rs  iban.rs  ip.rs  mod.rs  nhs_number.rs  phone.rs  url.rs  us_ssn.rs
crates/pii/src/recognizer/rule/: all.rs  api_key.rs  bank_account_uk.rs  credit_card.rs  crypto.rs  cvv.rs  email.rs  iban.rs  ip.rs  itin.rs  jwt_token.rs  mac_address.rs  mod.rs  nhs_number.rs  nino_uk.rs  passport_uk.rs  passport_us.rs  phone.rs  private_key.rs  routing_number_us.rs  sin_ca.rs  sort_code_uk.rs  tax_id_ein.rs  url.rs  us_ssn.rs  vat_number.rs
crates/pii/src/recognizer/validator/: aba_routing.rs  and.rs  ein_prefix.rs  iban.rs  ip.rs  itin_range.rs  jwt_header.rs  keyword.rs  luhn.rs  luhn_sin.rs  mod.rs  mod11_nhs.rs  nino_blocklist.rs  noop.rs  private_key_type.rs  us_ssn.rs  vat_country_length.rs
crates/pii/src/recognizers/: all.rs  api_key.rs  bank_account_uk.rs  credit_card.rs  crypto.rs  cvv.rs  email.rs  iban.rs  ip.rs  itin.rs  jwt_token.rs  mac_address.rs  mod.rs  nhs_number.rs  nino_uk.rs  passport_uk.rs  passport_us.rs  phone.rs  prelude.rs  private_key.rs  routing_number_us.rs  sin_ca.rs  sort_code_uk.rs  tax_id_ein.rs  url.rs  us_ssn.rs  vat_number.rs
crates/pii/src/recognizers/can/: mod.rs  sin.rs
crates/pii/src/recognizers/deu/: commercial_register.rs  driving_licence.rs  health_insurance.rs  id_card.rs  license_plate.rs  lifetime_physician_number.rs  medical_practice_id.rs  mod.rs  passport.rs  postcode.rs  social_security.rs  tax_id.rs  tax_number.rs
crates/pii/src/recognizers/eur/: mod.rs  vat_number.rs
crates/pii/src/recognizers/gbr/: bank_account.rs  driving_licence.rs  mod.rs  nhs_number.rs  nino.rs  passport.rs  postcode.rs  sort_code.rs  vehicle_registration.rs
crates/pii/src/recognizers/generic/: api_key.rs  credit_card.rs  crypto.rs  cvv.rs  date_of_birth.rs  email.rs  iban.rs  ip.rs  (+7 more)
crates/pii/src/types/: entity.rs  entity_type.rs  mod.rs
crates/pii/src/validators/: aba_routing.rs  aba_routing_usa.rs  crypto.rs  digits.rs  ein_prefix.rs  ein_prefix_usa.rs  health_insurance_deu.rs  iban.rs  icao_mrz9.rs  id_card_deu.rs  ip.rs  itin_range.rs  jwt_header.rs  keyword.rs  lifetime_physician_number_deu.rs  luhn.rs  luhn_sin.rs  luhn_sin_can.rs  medical_license_us.rs  medical_license_usa.rs  medical_practice_id_deu.rs  mod.rs  mod11_nhs.rs  mod11_nhs_gbr.rs  nino_blocklist.rs  npi_us.rs  npi_usa.rs  phone.rs  phone_national.rs  prelude.rs  private_key_type.rs  social_security_deu.rs  ssn_usa.rs  tax_id_deu.rs  us_ssn.rs  vat_country_length.rs  vat_country_length_eur.rs
crates/pii/tests/: analyzer.rs  analyzer_behaviour.rs  analyzer_builder.rs  analyzer_corpus.rs  anonymizer.rs  anonymizer_acceptance.rs  anonymizer_roundtrip.rs  custom_recognizer.rs  deny_list.rs  hash_determinism.rs  ner.rs  ner_integration.rs  timeout.rs
crates/pii/tests/corpus/: credit_card.txt  crypto.txt  email.txt  iban.txt  ip.txt  phone.txt  url.txt  us_ssn.txt
(+198 files in other folders)
