[package]
name = "sql-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "runtime-tokio-rustls", "mysql", "postgres", "sqlite"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.61", features = ["visitor"] }
thiserror = "2"
mimalloc = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
