[package]
name = "dbmcp-pii"
description = "PII dbmcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["builtin"]
builtin = []
serde = ["dep:serde"]

[dependencies]
fancy-regex = { workspace = true }
hmac = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
