[package]
name = "dbmcp-pii"
description = "PII analyzer and anonymizer for dbmcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
autobenches = false

[dependencies]
base64 = { workspace = true }
bech32 = { workspace = true }
bs58 = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
dbmcp-config = { workspace = true }
fancy-regex = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "analyze"
harness = false

[[bench]]
name = "anonymize"
harness = false

[[bench]]
name = "redact"
harness = false

[lints]
workspace = true
